--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -53,7 +53,7 @@ table {
 */
 body {
   color: black;
-  font: 300 16px/22px "courier new", "courier", sans-serif;
+  font: 16px/24px "courier new", "courier", sans-serif;
 }
 
 header {
@@ -64,6 +64,34 @@ h1 {
 	font-size: 50px;
 	font-weight: bold;
 	
+}
+
+nav {
+	font-weight: bold;
+}
+
+.nav2 { 
+	font-weight: bold;
+	text-align: right;
+}
+
+.welcome { 
+	text-align: right;
+}
+
+h2 {
+	font-size: 25px;
+	text-decoration: underline;
+	font-weight: 75;
+}
+
+h3 {
+	font-size: 40px;
+	padding-bottom: 35px;
+}
+
+.firstline {
+	font-weight: bold;
 }
 
 /*
@@ -83,7 +111,7 @@ h1 {
 .container {
   margin: 0 auto;
   padding-left: 30px;
-  padding-right: 30px;
+  padding-right: 0px;
   width: 960px;
 }
 
@@ -117,29 +145,12 @@ h1, h3, h4, h5, p {
 
 /*
   ========================================
-  Buttons
-  ========================================
-*/
-
-.btn {
-  border-radius: 5px;
-  display: inline-block;
-  margin: 0;
-}
-
-.btn-alt {
-  border: 1px solid #dfe2e5;
-  padding: 10px 30px;
-}
-
-/*
-  ========================================
   Home
   ========================================
 */
 
 .hero {
-  padding: 22px 80px 66px 80px;
+  padding: 50px 0px 66px 80px;
 }
 
 /*
