--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -73,6 +73,9 @@ nav {
 .nav2 { 
 	font-weight: bold;
 	text-align: right;
+	font-size: 20px;
+	padding-top: 26px;
+	padding-bottom: 26px;
 }
 
 .welcome { 
@@ -82,16 +85,19 @@ nav {
 h2 {
 	font-size: 25px;
 	text-decoration: underline;
-	font-weight: 75;
+	font-weight: bold;
 }
 
 h3 {
 	font-size: 40px;
 	padding-bottom: 35px;
+	font-weight: bold;
+	padding-top: 35px;
 }
 
 .firstline {
 	font-weight: bold;
+	font-size: 18px;
 }
 
 /*
@@ -167,4 +173,5 @@ aside {
 	text-align: right;
 	margin: 50px 1.5%;
 	width: 30%;
+	padding-bottom: 50px;
 }
